...
}

@Composable
fun ShowTimes(showTimes: String) {
    Column {
        Text(
            text = "Show Times",
            style = MaterialTheme.typography.titleLarge,
            color = MaterialTheme.colorScheme.onSurface,
            modifier = Modifier.padding(top = 24.dp, bottom = 8.dp)
        )

        showTimes.split(",").map { it.trim() }.forEach { time ->
...
    }
}

@Composable
fun ImportantInformation() {
    Text(
        text = "Important Information",
        style = MaterialTheme.typography.titleLarge, color = MaterialTheme.colorScheme.onSurface,
        modifier = Modifier.padding(
            top = 16.dp,
            bottom = 8.dp
        )
    )
...
